# overleaf-ce-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backups/skills/sci-paper-writer/: SKILL.md
backups/skills/sci-paper-writer/agents/: openai.yaml
docs/: Docker部署.md  使用手册.md  快速上手.md
overleaf_ce_mcp/: __init__.py  cache_store.py  compat.py  deep_research.py  diagram_workflow.py  evidence_binding.py  generic_priority_loop.py  optimization_loop.py  paper_doctor.py  review.py  scheduler.py  scholar.py  server.py  sync.py  template.py  upgrade_loop.py  upload.py  workflow.py
overleaf_ce_mcp/templates/ocean-engineering-oa/: main.tex  references.bib
overleaf_ce_mcp/templates/priority-plan/: data-analysis-cycle.json  dev-feature-cycle.json  docs-quality-cycle.json  ops-maintenance-cycle.json
overleaf_ce_mcp/vendor_patches/olsync/: olclient.py  olsync.py
scripts/: bootstrap.sh
templates/ocean-engineering-oa/sections/: conclusion.tex  discussion.tex  introduction.tex  methods.tex
tests/: test_deep_research.py  test_diagram_workflow.py  test_evidence_binding.py  test_generic_priority_loop.py  test_journal_and_reference.py  test_letpub_integration.py  test_optimization_loop.py  test_paper_doctor.py  test_paper_state_workspace.py  test_review.py  test_scheduler.py  test_scholar.py  test_scholar_enhancements.py  test_server_e2e.py  test_sync.py  test_upgrade_loop.py  test_workflow.py
vendor_patches/olsync/: olbrowserlogin.py  olclient.py
vendor_patches/socketIO_client/: transports.py
(+7 files in other folders)
